app/assets/stylesheets/shared/_pygment_monokai.sass
//
// pygment-css stylesheet lightly modified
// @see http://richleland.github.io/pygments-css/
//
.highlight
  background-color: #333
  &.shell
    color: #bbb

  // Comment
  .c
    color: #75715e
  // Error
  .err
    color: #960050
    background-color: #1e0010
  // Keyword
  .k
    color: #66d9ef
  // Literal
  .l
    color: #ae81ff
  // Name
  .n
    color: #f8f8f2
  // Operator
  .o
    color: #f92672
  // Punctuation
  .p
    color: #f8f8f2
  // Comment.Multiline
  .cm
    color: #75715e
  // Comment.Preproc
  .cp
    color: #75715e
  // Comment.Single
  .c1
    color: #75715e
  // Comment.Special
  .cs
    color: #75715e
  // Generic.Emph
  .ge
    font-style: italic
  // Generic.Strong
  .gs
    font-weight: bold
  // Keyword.Constant
  .kc
    color: #66d9ef
  // Keyword.Declaration
  .kd
    color: #66d9ef
  // Keyword.Namespace
  .kn
    color: #f92672
  // Keyword.Pseudo
  .kp
    color: #66d9ef
  // Keyword.Reserved
  .kr
    color: #66d9ef
  // Keyword.Type
  .kt
    color: #66d9ef
  // Literal.Date
  .ld
    color: #e6db74
  // Literal.Number
  .m
    color: #ae81ff
  // Literal.String
  .s
    color: #e6db74
  // Name.Attribute
  .na
    color: #a6e22e
  // Name.Builtin
  .nb
    color: #f8f8f2
  // Name.Class
  .nc
    color: #a6e22e
  // Name.Constant
  .no
    color: #66d9ef
  // Name.Decorator
  .nd
    color: #a6e22e
  // Name.Entity
  .ni
    color: #f8f8f2
  // Name.Exception
  .ne
    color: #a6e22e
  // Name.Function
  .nf
    color: #a6e22e
  // Name.Label
  .nl
    color: #f8f8f2
  // Name.Namespace
  .nn
    color: #f8f8f2
  // Name.Other
  .nx
    color: #a6e22e
  // Name.Property
  .py
    color: #f8f8f2
  // Name.Tag
  .nt
    color: #f92672
  // Name.Variable
  .nv
    color: #f8f8f2
  // Operator.Word
  .ow
    color: #f92672
  // Text.Whitespace
  .w
    color: #f8f8f2
  // Literal.Number.Float
  .mf
    color: #ae81ff
  // Literal.Number.Hex
  .mh
    color: #ae81ff
  // Literal.Number.Integer
  .mi
    color: #ae81ff
  // Literal.Number.Oct
  .mo
    color: #ae81ff
  // Literal.String.Backtick
  .sb
    color: #e6db74
  // Literal.String.Char
  .sc
    color: #e6db74
  // Literal.String.Doc
  .sd
    color: #e6db74
  // Literal.String.Double
  .s2
    color: #e6db74
  // Literal.String.Escape
  .se
    color: #ae81ff
  // Literal.String.Heredoc
  .sh
    color: #e6db74
  // Literal.String.Interpol
  .si
    color: #e6db74
  // Literal.String.Other
  .sx
    color: #e6db74
  // Literal.String.Regex
  .sr
    color: #e6db74
  // Literal.String.Single
  .s1
    color: #e6db74
  // Literal.String.Symbol
  .ss
    color: #e6db74
  // Name.Builtin.Pseudo
  .bp
    color: #f8f8f2
  // Name.Variable.Class
  .vc
    color: #f8f8f2
  // Name.Variable.Global
  .vg
    color: #f8f8f2
  // Name.Variable.Instance
  .vi
    color: #f8f8f2
  // Literal.Number.Integer.Long
  .il
    color: #ae81ff

  // Generic Heading & Diff Header
  .gh
  // Generic.Subheading & Diff Unified/Comment?
  .gu
    color: #75715e
  // Generic.Deleted & Diff Deleted
  .gd
    color: #f92672
  // Generic.Inserted & Diff Inserted
  .gi
    color: #a6e22e

